[package]
name = "game-boy-emulator"
version = "0.1.0"
edition = "2021"
authors = [
    "Alex Weatherhead <22604743+Alex-Weatherhead@users.noreply.github.com>",
    "Zac Macdonald <10253848+ZacMacd@users.noreply.github.com>"
]
description = "An emulator for the original Game Boy!"
readme = "README.md"
repository = "https://github.com/Alex-Weatherhead/game-boy-emulator"
license-file = "LICENSE.md"
keywords = ["Game Boy", "Emulator"]
categories = ["emulators"]
publish = ["crates.io"]

[dependencies]
